#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-09
2015-07-14 Mikhail S. Dubrovin
- PyDetector.py - change interface to mask(.) as users requested (PSAS-139)

Tag: V00-00-08
2015-07-13 Mikhail S. Dubrovin
- Re-implement mask method to generate combined mask array, rename methods by user's request (PSAS-139)
  - DetectorAccess, pyext/pyDetector.cpp add parameter mbits in method pixel_mask_geo
  - PyDetector.py
	- rename method raw_data -> raw
	- rename method calib_data -> calib
	- rename method mask -> mask_calib
	- rename method print_members -> print_attributes
	- add parameter mbits in method mask_geo
	- add method mask(.)
	- adjust sphinx doc.
  - Add examples/ex_mask.py
  - Adjust other examples for renamed methods.

	
Tag: V00-00-07
2015-06-22 Mikhail S. Dubrovin
- Add implementation and access to Acqiris through PyDetector.raw_data() (PSAS-139)
  - PyDataAccess.py add get_acqiris_data_object(.) and get_acqiris_config_object(.)
  - PyDetector.py add documentation for Acqiris
  - PyDetectorAccess.py add implementation raw_data_acqiris(.), set_correct_acqiris_time(.), raw_data(.)
  - add examples/ex_acqiris.py

Tag: V00-00-06
2015-06-12 Mikhail S. Dubrovin
- fix sphinx documentation, cosmetic changes.
- set SConscript to generate documentation 
	
Tag: V00-00-05
2015-06-11 Mikhail S. Dubrovin
- extensive development (PSAS-139) 
	- add C++/python code for common mode correction
	- add calib_data(...) method to apply 3 corrections (pedestals, pixel status mask, common mode)
	- add protection in many places: return None if returning object is non-available